--- a/src/main/java/org/myProject/Settings/Interface.properties
+++ b/src/main/java/org/myProject/Settings/Interface.properties
@@ -1,2 +1,9 @@
-Color="morado"
+#Estos son para la interface en su theme oscuro
+
+
+
+#Estos son para la interface en su theme predeterminado
+Color="Vinotinto"
 Tamaño="Mediano"
+Color-Text="BLACK"
+Color-Title="WHITE"
