--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.myProject</groupId>
     <artifactId>ProjectStudents</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.5</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
